--- a/wb_animation_action/resources/competition.html
+++ b/wb_animation_action/resources/competition.html
@@ -87,9 +87,8 @@
                 const resultNode = document.createElement('div');
                 resultNode.setAttribute('class', 'overview');
                 resultNode.innerHTML = `
-                    <div class="cell competitor-a">${getCompetitorNodeFromId(results.ranking, match.competitor_a)}</div>
-                    <div class="cell result">${(match.winner == 'competitor_a') ? '1 - 0' : '0 - 1'}</div>
-                    <div class="cell competitor-b">${getCompetitorNodeFromId(results.ranking, match.competitor_b)}</div>
+                    <div class="cell competitor">${getCompetitorNodeFromId(results.ranking, match.competitor)}</div>
+                    <div class="cell points">${match.points}</div>
                 `;
                 rawNode.appendChild(resultNode);
                 rawNode.appendChild(previewNode);
