change title, add links

--- a/wb_animation_action/resources/competition.html
+++ b/wb_animation_action/resources/competition.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' />
-    <title>Leader Board</title>
+    <title>SCOREBOARD | IROS 2021 | IROS-RSJ Robotic Challenge for Young Students</title>
     <link type="text/css" href="https://www.cyberbotics.com/jquery-ui/1.11.4/jquery-ui.min.css" rel="stylesheet" />
     <link type="text/css" href="https://www.cyberbotics.com/wwi/R2020b/wwi.css" rel="stylesheet" />
     <script src="https://www.cyberbotics.com/jquery/1.11.3/jquery.min.js"></script>
@@ -218,7 +218,12 @@
 
 <body>
     <div id="content">
-        <h1 id="title">Leader Board</h1>
+        <h3 style="text-align: center;">
+            <a href="https://www.iros2021.org" target=_blank>IROS 2021</a>
+            -
+            <a href="https://roboticslab-uc3m.github.io/challenge-iros2021" target=_blank>IROS-RSJ Robotic Challenge for Young Students</a>
+        </h3>
+        <h1 id="title">SCOREBOARD</h1>
         <p class="update">Updated on <span id="timestamp"></span></p>
 
         <div class="card rankings">
