--- a/wb_animation_action/resources/competition.html
+++ b/wb_animation_action/resources/competition.html
@@ -223,7 +223,7 @@
             -
             <a href="https://roboticslab-uc3m.github.io/challenge-iros2021" target=_blank>IROS-RSJ Robotic Challenge for Young Students</a>
         </h3>
-        <h1 id="title">SCOREBOARD</h1>
+        <h1 id="title">🏆 SCOREBOARD 🏆</h1>
         <p class="update">Updated on <span id="timestamp"></span></p>
 
         <div class="card rankings">
